  in the create topic screen may not work correctly for some versions
  of Subversion.  This has now been fixed by 
  rob_webset@users.sourceforge.net. 
  
* Ability to parse git patches correctly.

* Better detection of filename extensions for highlighting.  This
  previously caused issues for temporary directories which contained 
  a period, but the filename itself didn't.  Reported by
  rob_webset@users.sourceforge.net.  

Version 1.9.5

* Syntax highlighting is now supported using the highlight package from
  http://www.andre-simon.de/.  Check the codestriker.conf file for
  configuration.  Many thanks to Nikita V. Borodikhin
  <eliterr@users.sourceforge.net> for all his assistance in implementing
  this feature.

* Allow the ability to specify just a filename (for the module field)
  and a revision number (for the start or end tag) to create a review
  for a specific version of a file in a subversion repository.

* Fixed database code which was preventing user metrics being updated
  under SQL Server.

* Make sure the email subject field properly encodes underscores and
  question marks.  Submitted by jon787@users.sourceforge.net.

* Only require Authen::SASL as a pre-requisite if SMTP authentication
  is needed.  For some deployments, installing Authen::SASL can be
  inconvenient.

* Support for TestDirector as a supported bug tracking system.
  Submitted by rob_webset@users.sourceforge.net.

* Support for creating reviews by just entering the bug IDs, and
  retrieving the data from Scmbug.
  Submitted by rob_webset@users.sourceforge.net.

* Make sure if an invalid CGI parameter value is specified that its
  value is encoded when displaying the generic error page.  Reported
  by amalakar@users.sourceforge.net.

* Make sure very long filenames don't move the diff display far to the
  right of the view topic page.  Fix suggested by
  rob_webset@users.sourceforge.net.
  
* The edit comment page has been updated so that the topic name is